--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -31,7 +31,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 	</dependencies>
+	
+	
 
 	<build>
 		<plugins>
